# claude-hooks

./: .gitignore  AGENTS.md  CALIBER_LEARNINGS.md  CHANGELOG.md  CLAUDE.md  COMPANION_TOOLS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  extract_plugin.py  install.py  pyproject.toml  requirements-dev.txt  requirements-pgvector.txt  requirements-sqlite-vec.txt  requirements.txt  run.py  run_daemon.py  run_proxy.py
.claude/: settings.json
.claude/skills/consolidate/: SKILL.md
.claude/skills/episodic/: SKILL.md
.claude/skills/reflect/: SKILL.md
.claude/skills/save-learning/: SKILL.md
.claude/skills/setup-compile-aware/: SKILL.md
.claude/skills/wrapup/: SKILL.md
.cursor/: hooks.json
.cursor/skills/find-skills/: SKILL.md
bench/: bench_parallel_providers.py
claude_hooks/: __init__.py  _parallel.py  axon_integration.py  claudemem_reindex.py  companion_integration.py  config.py  consolidate.py  daemon.py  daemon_client.py  daemon_ctl.py  decay.py  dedup.py  detect.py  dispatcher.py  embedders.py  gitnexus_integration.py  hyde.py  hyde_cache.py  instincts.py  kairos_pin.py  mcp_client.py  now_block.py  openwolf.py  recall.py  reflect.py  rtk_rewrite.py  safety_patterns.py  safety_scan.py  stop_guard.py  store_async.py  update_check.py  wrapup_recovery.py  wrapup_synth.py
claude_hooks/caliber_proxy/: __init__.py  __main__.py  ollama.py  prompt.py  recall.py  server.py  tools.py
claude_hooks/code_graph/: __init__.py  __main__.py  builder.py  changes.py  clustering.py  detect.py  impact.py  inject.py  mcp_server.py  mermaid.py  symbol_lookup.py  trace.py  tree_sitter_backend.py
claude_hooks/hooks/: __init__.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_end.py  session_start.py  stop.py  user_prompt_submit.py
claude_hooks/lsp_engine/: __init__.py  __main__.py  client.py  compile.py  config.py  daemon.py  engine.py  git_watch.py  ipc.py  locks.py  lsp.py  preload.py
claude_hooks/pgvector_mcp/: __init__.py  __main__.py  server.py
claude_hooks/providers/: __init__.py  base.py  memory_kg.py  pgvector.py  qdrant.py  sqlite_vec.py
claude_hooks/proxy/: __init__.py  __main__.py  dashboard.py  forwarder.py  logger.py  metadata.py  ratelimit_state.py  server.py  sse.py  stats_db.py  stop_phrase_guard.py  stub.py
config/: claude-hooks.bak.1777191216.json  claude-hooks.example.json  stop_phrases.yaml
docker/gitnexus/: Dockerfile  README.md  wrapper.sh
docs/: PLAN-code-factory-integration.md  PLAN-lsp-engine.md  PLAN-pgvector-migration.md  PLAN-proxy-hook.md  PLAN-stats-sqlite.md  PLAN-test-coverage.md  RELEASING.md  caliber-proxy.md  cc-xhigh-regression-issue.md  daemon.md  deployment.md  doc-audit-2026-05-01.md  env-vars.md  episodic-server.md  gemma4-tool-use-notes.md  hyde.md  issue-warmup-token-drain.md  lsp-engine.md  lsp-mcp.md  openwolf-managedby-issue.md  pgvector-runbook.md  proxy.md
episodic_server/: Dockerfile  docker-compose.yaml  episodic-server.service  server.py
graphify-out/: GRAPH_REPORT.md  _meta.json  graph.json
modelfiles/: gemma4-98e-native-tools.Modelfile
patches/: apply-caliber-patch.sh  caliber-claude-code-simple-auth.md
scripts/: bench_lsp_engine.py  bench_recall.py  caliber-precommit.sh  install-caliber-hook.sh  migrate_to_pgvector.py  openwolfstatus.bat  openwolfstatus.py  openwolfstatus.sh  proxy_health_oneliner.py  proxy_rollup.py  proxy_stats.py  status.py  statusline_compose.py  statusline_usage.py  weekly_token_usage.py
systemd/: axon-host.service  caliber-grounding-proxy.service  claude-hooks-code-graph-mcp.service  claude-hooks-daemon.service  claude-hooks-dashboard.service  claude-hooks-health.service  claude-hooks-health.timer  claude-hooks-kairos-pin.path  claude-hooks-kairos-pin.service  claude-hooks-pgvector-mcp.service  claude-hooks-proxy.service  claude-hooks-rollup.service  claude-hooks-rollup.timer
tests/: conftest.py  lsp_engine_fake_server.py  test_axon_integration.py  test_batch_api.py  test_caliber_proxy.py  test_caliber_proxy_recall.py  test_claude_mem_ports.py  test_claudemem_reindex.py  test_code_graph.py  test_code_graph_impact.py  test_code_graph_symbol_lookup.py  test_code_graph_tier3.py  test_companion_integration.py  test_config.py  test_consolidate.py  test_coverage_phase8.py  test_daemon.py  test_daemon_ctl.py  test_dashboard.py  test_decay.py  test_dedup.py  test_detect.py  test_dispatcher.py  test_embedders.py  test_fixtures.py  test_gitnexus_integration.py  test_handlers.py  test_hyde.py  test_hyde_cache.py  test_install_conda_probe.py  test_install_daemon_outer_flow.py  test_install_daemon_windows.py  test_install_proxy_launchd.py  test_install_proxy_orchestrator.py  test_install_proxy_stack.py  test_install_proxy_windows.py  test_instincts.py  test_kairos_pin.py  test_lsp_engine_compile.py  test_lsp_engine_config.py  (+40 more)
tests/mocks/: mcp.py  ollama.py
