[project]
name = "claude-hooks"
version = "0.7.0"
description = "Cross-platform Claude Code hooks for deterministic memory recall and storage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "mann1x" }
]
keywords = ["claude", "hooks", "memory", "qdrant", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/mann1x/claude-hooks"

[project.scripts]
# System-wide stdio MCP launcher for the pgvector store. Installed by
# ``pip install claude-hooks`` (or ``pip install -e .`` from the repo)
# so any MCP-aware tool — Claude Code, Cursor, Codex, OpenWebUI — can
# spawn the same server independently of where the repo lives. The
# installer also drops a hand-rolled wrapper at ~/.local/bin/pgvector-mcp
# for users who run install.py without a pip install of the package.
pgvector-mcp = "claude_hooks.pgvector_mcp.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "coverage>=7.0"]
pgvector = ["psycopg[binary]"]
sqlite-vec = ["sqlite-vec"]
# Multi-language code-graph builder. With this extra installed the
# code_graph module parses JS/TS/Go/Rust/Java/Ruby in addition to the
# stdlib-ast-driven Python support that ships in the core. Either
# package works (we lazy-probe at import time, preferring the actively
# maintained fork).
code-graph = ["tree-sitter-language-pack>=0.13"]
# Optional community detection on top of code_graph. Both deps are pure
# Python (MIT/BSD), no native build required. When installed,
# ``code_graph.clustering`` uses Louvain modularity on the call graph
# to find functional communities + per-node cohesion scores; absent →
# graceful fallback to per-file clustering.
clustering = ["python-louvain>=0.16", "networkx>=3.0"]
# MCP server exposing code_graph features as callable tools.
# Wire into Claude Code via ``~/.claude.json``'s ``mcpServers``.
mcp-server = ["mcp[cli]>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["claude_hooks"]
branch = true
omit = [
    "claude_hooks/providers/pgvector.py",
    "claude_hooks/providers/sqlite_vec.py",
    "claude_hooks/detect.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
